# AI-CAD

./: .gitignore  Cargo.toml  project_plan.md
.github/workflows/: ci.yml
crates/sdf-ai/: Cargo.toml
crates/sdf-ai/src/: lib.rs
crates/sdf-cli/: Cargo.toml
crates/sdf-cli/src/: main.rs
crates/sdf-core/: Cargo.toml
crates/sdf-core/src/: evaluate.rs  lib.rs  operations.rs  primitives.rs  transforms.rs
crates/sdf-dsl/: Cargo.toml
crates/sdf-dsl/src/: lib.rs
crates/sdf-mesh/: Cargo.toml
crates/sdf-mesh/src/: export.rs  lib.rs  marching_cubes.rs  tables.rs
crates/sdf-server/: Cargo.toml
crates/sdf-server/src/: lib.rs  main.rs
frontend/: README.md  index.html  package-lock.json  package.json  server.mjs  styles.css
frontend/src/: main.js  mesh-utils.js  viewer.js
frontend/tests/unit/: mesh-utils.test.mjs
oracle/: compare_results.py  evaluate_oracle.py  generate_test_points.py  mesh_oracle_checks.py  performance_budget.py  requirements.txt
